--- a/Resturants/Cell/TagUserCell/TagUserTCell.xib
+++ b/Resturants/Cell/TagUserCell/TagUserTCell.xib
@@ -71,7 +71,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="DWi-Fb-HLE">
                                 <rect key="frame" x="205.66666666666666" y="20" width="108.33333333333334" height="26"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="avu-81-mcS">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="avu-81-mcS">
                                         <rect key="frame" x="0.0" y="0.99999999999999822" width="24" height="24.666666666666664"/>
                                         <color key="tintColor" name="ColorWhite"/>
                                         <constraints>
@@ -138,7 +138,7 @@
     </objects>
     <resources>
         <image name="More" width="16.333333969116211" height="16.333333969116211"/>
-        <image name="circle.fill" catalog="system" width="128" height="123"/>
+        <image name="circle" catalog="system" width="128" height="123"/>
         <image name="person.circle.fill" catalog="system" width="128" height="123"/>
         <namedColor name="ColorBlack">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
