--- a/Resturants/StroyBoard/Add.storyboard
+++ b/Resturants/StroyBoard/Add.storyboard
@@ -1030,7 +1030,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gx7-F4-llQ">
                                                         <rect key="frame" x="0.0" y="0.0" width="184.66666666666666" height="180"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qU1-9o-X46">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qU1-9o-X46">
                                                                 <rect key="frame" x="0.0" y="0.0" width="184.66666666666666" height="180"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -1077,7 +1077,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yrD-58-dYF">
                                                         <rect key="frame" x="196.66666666666663" y="0.0" width="184.33333333333337" height="180"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Upload Thumbnail" translatesAutoresizingMaskIntoConstraints="NO" id="rz1-3p-SxR">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Upload Thumbnail" translatesAutoresizingMaskIntoConstraints="NO" id="rz1-3p-SxR">
                                                                 <rect key="frame" x="0.0" y="0.0" width="184.33333333333334" height="180"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -1831,10 +1831,10 @@
                                             <action selector="ontapDismiss:" destination="qsv-ca-KP5" eventType="touchUpInside" id="qYs-ZR-1US"/>
                                         </connections>
                                     </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cmI-At-AFc">
-                                        <rect key="frame" x="24" y="79.666666666666657" width="345" height="165"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cmI-At-AFc">
+                                        <rect key="frame" x="24" y="79.666666666666657" width="345" height="179.99999999999997"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="165" id="aj5-Zn-d0p"/>
+                                            <constraint firstAttribute="height" constant="180" id="aj5-Zn-d0p"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -1849,7 +1849,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="GcP-9j-o4g">
-                                        <rect key="frame" x="74.666666666666686" y="306.66666666666669" width="244" height="109"/>
+                                        <rect key="frame" x="74.666666666666686" y="321.66666666666669" width="244" height="109"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="DUR-mP-6iq">
                                                 <rect key="frame" x="0.0" y="0.0" width="104" height="109"/>
@@ -1990,7 +1990,7 @@
                                         </connections>
                                     </button>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="3UG-tG-JGl">
-                                        <rect key="frame" x="22" y="260.66666666666669" width="349" height="31"/>
+                                        <rect key="frame" x="22" y="275.66666666666669" width="349" height="31"/>
                                         <connections>
                                             <action selector="sliderValueChanged:" destination="qsv-ca-KP5" eventType="touchUpInside" id="mCX-xb-529"/>
                                         </connections>
@@ -3050,7 +3050,7 @@
         <image name="text" width="24" height="24"/>
         <image name="trash-blank" width="50" height="50"/>
         <image name="unselecPhoto" width="32" height="32"/>
-        <image name="user" width="24.333333969116211" height="24"/>
+        <image name="user" width="24" height="24"/>
         <image name="video" catalog="system" width="128" height="82"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
