--- a/Resturants/Cell/videoTCell/VideoTCell.xib
+++ b/Resturants/Cell/videoTCell/VideoTCell.xib
@@ -26,7 +26,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hRy-Ep-afj">
                         <rect key="frame" x="0.0" y="0.0" width="364" height="83"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Video 1" translatesAutoresizingMaskIntoConstraints="NO" id="9Jv-Nx-zpg">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Video 1" translatesAutoresizingMaskIntoConstraints="NO" id="9Jv-Nx-zpg">
                                 <rect key="frame" x="16" y="6" width="150" height="71"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="XI1-pv-1xd"/>
